Assets/Antlr4/FaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/ofmendez/DataDocs/Work/Ubuntu/LENGUAJES/Danfab/projectUnity/Danfab/Assets/Antlr4/Fa.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class FaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, TRUE=26, FALSE=27, NOT=28, RELATIONAL=29, EQUALITY_NUMERIC=30, 
		AND=31, OR=32, ID=33, COMMENT=34, DOUBLE=35, INTEGER=36, STRING=37, MUL=38, 
		SUM=39, NEGATIVE=40, WS=41, ErrorChar=42;
	public const int
		RULE_principal = 0, RULE_block = 1, RULE_function_call = 2, RULE_arrayPosition = 3, 
		RULE_print = 4, RULE_arraysize = 5, RULE_if_regular = 6, RULE_if_return = 7, 
		RULE_if_break_continue = 8, RULE_if_return_break_continue = 9, RULE_switch_regular = 10, 
		RULE_switch_return = 11, RULE_switch_break_continue = 12, RULE_switch_return_break_continue = 13, 
		RULE_while_regular = 14, RULE_while_return = 15, RULE_function = 16, RULE_body = 17, 
		RULE_body_regular = 18, RULE_body_return = 19, RULE_return_regular = 20, 
		RULE_body_break_continue = 21, RULE_body_return_break_continue = 22, RULE_expression = 23, 
		RULE_expressionContent = 24, RULE_dataType = 25;
	public static readonly string[] ruleNames = {
		"principal", "block", "function_call", "arrayPosition", "print", "arraysize", 
		"if_regular", "if_return", "if_break_continue", "if_return_break_continue", 
		"switch_regular", "switch_return", "switch_break_continue", "switch_return_break_continue", 
		"while_regular", "while_return", "function", "body", "body_regular", "body_return", 
		"return_regular", "body_break_continue", "body_return_break_continue", 
		"expression", "expressionContent", "dataType"
	};

	private static readonly string[] _LiteralNames = {
		null, "'usa'", "'nada'", "','", "'en'", "'imprima'", "'tama\u00F1o'", 
		"'de'", "'si'", "'entonces'", "'o_si'", "'sino'", "'fin'", "'cuando'", 
		"'escoge'", "'case'", "'entonce'", "'mientras'", "'como'", "':'", "'lista'", 
		"'responde'", "'interrumpir'", "'continuar'", "'('", "')'", "'verdadero'", 
		"'falso'", "'negar'", null, null, "'y_logico'", "'o_logico'", null, null, 
		null, null, null, null, "'+'", "'-'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "TRUE", "FALSE", "NOT", "RELATIONAL", "EQUALITY_NUMERIC", 
		"AND", "OR", "ID", "COMMENT", "DOUBLE", "INTEGER", "STRING", "MUL", "SUM", 
		"NEGATIVE", "WS", "ErrorChar"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Fa.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class PrincipalContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public PrincipalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_principal; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrincipal(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrincipalContext principal() {
		PrincipalContext _localctx = new PrincipalContext(Context, State);
		EnterRule(_localctx, 0, RULE_principal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public BodyContext body() {
			return GetRuleContext<BodyContext>(0);
		}
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public FunctionContext function() {
			return GetRuleContext<FunctionContext>(0);
		}
		public If_regularContext if_regular() {
			return GetRuleContext<If_regularContext>(0);
		}
		public Switch_regularContext switch_regular() {
			return GetRuleContext<Switch_regularContext>(0);
		}
		public While_regularContext while_regular() {
			return GetRuleContext<While_regularContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 2, RULE_block);
		try {
			State = 70;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; body();
				State = 55; block();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; function();
				State = 58; block();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 60; if_regular();
				State = 61; block();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 63; switch_regular();
				State = 64; block();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 66; while_regular();
				State = 67; block();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Function_callContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Function_callContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function_call; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunction_call(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Function_callContext function_call() {
		Function_callContext _localctx = new Function_callContext(Context, State);
		EnterRule(_localctx, 4, RULE_function_call);
		try {
			int _alt;
			State = 85;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; Match(T__0);
				State = 73; Match(ID);
				State = 74; Match(T__1);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75; Match(T__0);
				State = 76; Match(ID);
				State = 77; expression();
				State = 82;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 78; Match(T__2);
						State = 79; expression();
						}
						} 
					}
					State = 84;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArrayPositionContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ArrayPositionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arrayPosition; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayPosition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArrayPositionContext arrayPosition() {
		ArrayPositionContext _localctx = new ArrayPositionContext(Context, State);
		EnterRule(_localctx, 6, RULE_arrayPosition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87; Match(ID);
			State = 88; Match(T__3);
			State = 89; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 8, RULE_print);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 91; Match(T__4);
			State = 92; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ArraysizeContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public ArraysizeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_arraysize; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArraysize(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ArraysizeContext arraysize() {
		ArraysizeContext _localctx = new ArraysizeContext(Context, State);
		EnterRule(_localctx, 10, RULE_arraysize);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(T__5);
			State = 95; Match(T__6);
			State = 96; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_regularContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Body_regularContext[] body_regular() {
			return GetRuleContexts<Body_regularContext>();
		}
		public Body_regularContext body_regular(int i) {
			return GetRuleContext<Body_regularContext>(i);
		}
		public If_regularContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_regular; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_regular(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_regularContext if_regular() {
		If_regularContext _localctx = new If_regularContext(Context, State);
		EnterRule(_localctx, 12, RULE_if_regular);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(T__7);
			State = 99; expression();
			State = 100; Match(T__8);
			State = 101; body_regular();
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 102; Match(T__9);
				State = 103; expression();
				State = 104; Match(T__8);
				State = 105; body_regular();
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 112; Match(T__10);
				State = 113; body_regular();
				}
			}

			State = 116; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_returnContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Body_returnContext[] body_return() {
			return GetRuleContexts<Body_returnContext>();
		}
		public Body_returnContext body_return(int i) {
			return GetRuleContext<Body_returnContext>(i);
		}
		public If_returnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_return; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_return(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_returnContext if_return() {
		If_returnContext _localctx = new If_returnContext(Context, State);
		EnterRule(_localctx, 14, RULE_if_return);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118; Match(T__7);
			State = 119; expression();
			State = 120; Match(T__8);
			State = 121; body_return();
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 122; Match(T__9);
				State = 123; expression();
				State = 124; Match(T__8);
				State = 125; body_return();
				}
				}
				State = 131;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 134;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 132; Match(T__10);
				State = 133; body_return();
				}
			}

			State = 136; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_break_continueContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Body_break_continueContext[] body_break_continue() {
			return GetRuleContexts<Body_break_continueContext>();
		}
		public Body_break_continueContext body_break_continue(int i) {
			return GetRuleContext<Body_break_continueContext>(i);
		}
		public If_break_continueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_break_continue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_break_continue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_break_continueContext if_break_continue() {
		If_break_continueContext _localctx = new If_break_continueContext(Context, State);
		EnterRule(_localctx, 16, RULE_if_break_continue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 138; Match(T__7);
			State = 139; expression();
			State = 140; Match(T__8);
			State = 141; body_break_continue();
			State = 149;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 142; Match(T__9);
				State = 143; expression();
				State = 144; Match(T__8);
				State = 145; body_break_continue();
				}
				}
				State = 151;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 154;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 152; Match(T__10);
				State = 153; body_break_continue();
				}
			}

			State = 156; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class If_return_break_continueContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public Body_return_break_continueContext[] body_return_break_continue() {
			return GetRuleContexts<Body_return_break_continueContext>();
		}
		public Body_return_break_continueContext body_return_break_continue(int i) {
			return GetRuleContext<Body_return_break_continueContext>(i);
		}
		public If_return_break_continueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_if_return_break_continue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIf_return_break_continue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public If_return_break_continueContext if_return_break_continue() {
		If_return_break_continueContext _localctx = new If_return_break_continueContext(Context, State);
		EnterRule(_localctx, 18, RULE_if_return_break_continue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158; Match(T__7);
			State = 159; expression();
			State = 160; Match(T__8);
			State = 161; body_return_break_continue();
			State = 169;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__9) {
				{
				{
				State = 162; Match(T__9);
				State = 163; expression();
				State = 164; Match(T__8);
				State = 165; body_return_break_continue();
				}
				}
				State = 171;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 172; Match(T__10);
				State = 173; body_return_break_continue();
				}
			}

			State = 176; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_regularContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public DataTypeContext[] dataType() {
			return GetRuleContexts<DataTypeContext>();
		}
		public DataTypeContext dataType(int i) {
			return GetRuleContext<DataTypeContext>(i);
		}
		public Body_regularContext[] body_regular() {
			return GetRuleContexts<Body_regularContext>();
		}
		public Body_regularContext body_regular(int i) {
			return GetRuleContext<Body_regularContext>(i);
		}
		public Switch_regularContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch_regular; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitch_regular(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Switch_regularContext switch_regular() {
		Switch_regularContext _localctx = new Switch_regularContext(Context, State);
		EnterRule(_localctx, 20, RULE_switch_regular);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 178; Match(T__12);
			State = 179; Match(ID);
			State = 180; Match(T__13);
			State = 186;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 181; Match(T__14);
				State = 182; dataType();
				State = 183; Match(T__15);
				State = 184; body_regular();
				}
				}
				State = 188;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__14 );
			State = 192;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 190; Match(T__10);
				State = 191; body_regular();
				}
			}

			State = 194; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_returnContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public DataTypeContext[] dataType() {
			return GetRuleContexts<DataTypeContext>();
		}
		public DataTypeContext dataType(int i) {
			return GetRuleContext<DataTypeContext>(i);
		}
		public Body_returnContext[] body_return() {
			return GetRuleContexts<Body_returnContext>();
		}
		public Body_returnContext body_return(int i) {
			return GetRuleContext<Body_returnContext>(i);
		}
		public Switch_returnContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch_return; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitch_return(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Switch_returnContext switch_return() {
		Switch_returnContext _localctx = new Switch_returnContext(Context, State);
		EnterRule(_localctx, 22, RULE_switch_return);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 196; Match(T__12);
			State = 197; Match(ID);
			State = 198; Match(T__13);
			State = 204;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 199; Match(T__14);
				State = 200; dataType();
				State = 201; Match(T__15);
				State = 202; body_return();
				}
				}
				State = 206;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__14 );
			State = 210;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__10) {
				{
				State = 208; Match(T__10);
				State = 209; body_return();
				}
			}

			State = 212; Match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Switch_break_continueContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(FaParser.ID, 0); }
		public DataTypeContext[] dataType() {
			return GetRuleContexts<DataTypeContext>();
		}
		public DataTypeContext dataType(int i) {
			return GetRuleContext<DataTypeContext>(i);
		}
		public Body_break_continueContext[] body_break_continue() {
			return GetRuleContexts<Body_break_continueContext>();
		}
		public Body_break_continueContext body_break_continue(int i) {
			return GetRuleContext<Body_break_continueContext>(i);
		}
		public Switch_break_continueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_switch_break_continue; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSwitch_break_continue(this);
			else return visitor.VisitChildren(this);
		}
	}
